# FastAPI-SQLModel-Super-Heroes-Super-Power-Registration-Sample-App

./: .gitignore  app.py  pyproject.toml
database/: db.py
models/: hero.py  team.py
sqliteDb/: database.db
